[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/scoreboard/Scoreboard.gd" type="Script" id=1]
[ext_resource path="res://res/themes/theme.tres" type="Theme" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -1.0
margin_bottom = -9.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
margin_right = 359.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header"]
margin_left = 7.0
margin_top = 7.0
margin_right = 352.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Header/HBoxContainer"]
margin_right = 280.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/Header/HBoxContainer"]
margin_left = 284.0
margin_right = 345.0
margin_bottom = 22.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Punkte"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 359.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 352.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScoreBox" type="VBoxContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 345.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 590.0
margin_right = 359.0
margin_bottom = 626.0

[node name="Previous" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 31.0
margin_bottom = 36.0
text = "<<<"

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 35.0
margin_right = 324.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource( 2 )
text = "Hauptmenü"

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 359.0
margin_bottom = 36.0
text = ">>>"

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -94.0
margin_right = 151.0
margin_bottom = 32.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -24.0
margin_right = 66.0
margin_bottom = 24.0
text = "Lade Highsore"
align = 1
valign = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -92.0
margin_right = 151.0
margin_bottom = -8.0
theme = ExtResource( 2 )
window_title = "Warnung!"

[node name="Label2" type="Label" parent="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -34.0
margin_right = 142.0
margin_bottom = -10.0
text = "Ungültige oder keine Daten."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
